# project-templates

./: README.md
kickstart-templates/python-poetry/: README.md  template.toml
kickstart-templates/python-poetry/{{ project_name $$ kebab_case }}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
kickstart-templates/python-poetry/{{ project_name $$ kebab_case }}/.devcontainer/: devcontainer.json
kickstart-templates/python-poetry/{{ project_name $$ kebab_case }}/.github/: dependabot.yml
kickstart-templates/python-poetry/{{ project_name $$ kebab_case }}/.github/workflows/: deploy.yml  publish.yml  test.yml
kickstart-templates/python-poetry/{{ project_name $$ kebab_case }}/src/{{ package_name $$ snake_case }}/: __init__.py  api.py  app.py  cli.py  sentry.py
kickstart-templates/python-poetry/{{ project_name $$ kebab_case }}/tests/: __init__.py  test_api.py  test_cli.py  test_import.py  test_sentry.py
scripts/: download-ffizer.ps1  download-ffizer.sh  download-ion.sh  download-kickstart.ps1  download-kickstart.sh
